manifests/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: azdevspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: loveofsports/python:3.9.18
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: backend-file
          mountPath: /data
      volumes:
      - name: backend-file
        persistentVolumeClaim:
          claimName: backend-pvc
