manifests/deploy-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
  namespace: azdevspace
  labels:
    app: be
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
        - name: be
          image: loveofsports.azurecr.io/be:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /ssweb/backend-container
              name: backend-file
          resources:
            limits:
              cpu: "2"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "256Mi"
      imagePullSecrets:
        - name: my-registry-secret
      volumes:
        - name: backend-file
          persistentVolumeClaim:
            claimName: backend-pvc
