manifests/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: azdevspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: loveofsports/ssweb-frontend:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: frontend-file
          mountPath: /usr/src/app
      volumes:
      - name: frontend-file
        persistentVolumeClaim:
          claimName: frontend-pvc
