manifests/deploy-re.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  namespace: azdevspace
  labels:
    app: redis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "2"
            memory: "1Gi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
      imagePullSecrets:
      - name: my-registry-secret
      volumes:
      - name: redis-file
        persistentVolumeClaim:
          claimName: redis-pvc
