manifests/deploy-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: azdevspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-file
          mountPath: /data
      volumes:
      - name: redis-file
        persistentVolumeClaim:
          claimName: redis-pvc
