manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
  labels:
    app: be
  namespace: azdevspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
        - name: be
          image: loveofsports.azurecr.io/be:latest
          ports:
            - containerPort: 5000
