manifests/pod-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: azdevspace
  name: backend-pod
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: loveofsports.azurecr.io/python:3.9.18
      resources:
        limits:
          cpu: "2"
          memory: "1Gi"
        requests:
          cpu: "500m"
          memory: "256Mi"
      volumeMounts:
        - mountPath: /ssweb/src
          name: sportfs
  imagePullSecrets:
    - name: my-registry-secret
  volumes:
    - name: sportfs
      persistentVolumeClaim:
        claimName: backend-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: azdevspace
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: backend
  type: ClusterIP
