manifests/pod-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: azdevspace
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "2"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
          volumeMounts:
            - mountPath: /data
              name: redis-volume
      imagePullSecrets:
        - name: my-registry-secret
      volumes:
        - name: redis-volume
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: azdevspace
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
