manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe
  namespace: azdevspace
spec:
  type: LoadBalancer
  selector:
    app: fe
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
