manifests/svc-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: be
  namespace: azdevspace
spec:
  ports:
  - name: behttp
    port: 80
    targetPort: 5000
  - name: 5k
    port: 5000
    targetPort: 5000
  selector:
    app: be
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
