manifests/svc-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: azdevspace
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
