manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: loveoffootball-ingress
  namespace: azdevspace
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  defaultBackend:
    service:
      name: fe
      port:
        number: 80
  ingressClassName: azure-application-gateway
  rules:
  - host: loveoffootball.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe
            port:
              number: 80
      - path: /.well-known/acme-challenge/
        pathType: Exact
        backend:
          service:
            name: cm-acme-http-solver-qdx96
            port:
              number: 80
  tls:
    - hosts:
        - loveoffootball.io
      secretName: loveoffootball-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nwp-ingress-azdev
  namespace: azdevspace
spec:
  podSelector:
    matchLabels:
      app: fe
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
